--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+*/node_modules
+BackEnd/node_modules/.bin
+*/node_modules/.
+*/node_modules/.pnp
 .pnp.js
 
 # testing
