--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ BackEnd/node_modules/.bin
 */node_modules/.
 */node_modules/.pnp
 .pnp.js
-
+/phaser3-typescript-parcel-template/.cache
 # testing
 /coverage
 
