--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ BackEnd/node_modules/.bin
 */node_modules/.pnp
 .pnp.js
 /phaser3-typescript-parcel-template/.cache
+/phaser3-typescript-parcel-template/dist
 # testing
 /coverage
 
