--- a/FrontEnd/tsconfig.json
+++ b/FrontEnd/tsconfig.json
@@ -9,7 +9,9 @@
       "esModuleInterop": true,
       "types": [],
       "skipLibCheck": true,
-      "typeRoots": ["./node_modules/@types"]
+      "typeRoots": [
+        "./node_modules/@types",
+      ]
     },
     "include": ["src/*"],
     "exclude": [
