--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "lodash": "^4.17.21",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "uuidv4": "^6.2.13"
   }
 }
