--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ Thumbs.db
 *.sublime-workspace
 
 # Vendors
-**/node_modules
-
+**/node_modules/*
+FrontEnd/node_modules/
 # Build
 /npm-debug.log
+node_modules
