--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -15,12 +15,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
-    "lodash": "^4.17.21",
     "socket.io": "^4.7.2",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.19",
+    "@types/lodash": "^4.14.200",
     "@types/node": "^20.8.6",
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
