--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -40,10 +40,12 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "lodash": "^4.17.21",
     "phaser": "^3.55.2",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.200",
     "@yandeu/prettier-config": "^0.0.3",
     "copy-webpack-plugin": "^10.1.0",
     "html-webpack-plugin": "^5.5.0",
