--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "lodash": "^4.17.21",
+    "mathjs": "^12.0.0",
     "phaser": "^3.55.2",
     "socket.io-client": "^4.7.2"
   },
